# march-madness-mania

./: .gitignore  README.md  model_performance_log.txt  preprocessing_pipeline.txt  pyproject.toml  results.csv
model-performances/: best_model_test.csv  metrics_no_pca.csv  metrics_pca.csv
notebooks/: adding_features.ipynb  bracket_lookup.ipynb  comparing_model_performances.ipynb  exploring_training_data.ipynb  modeling.ipynb  modeling_with_pca.ipynb
notebooks/EDA/: condensing-data.ipynb  data-exploration.ipynb
notes/: data_exploration.txt
scripts/: creating_training_dataset.py  feature_engineering.py  final_model.py  get_regular_season_stats.py  predictions.py  preparing_final_submission.py  preprocessing.py  splitting_data.py  testing_models_with_pca.py  testing_models_without_pca.py
