[tool.poetry]
name = "March-Madness-Mania"
version = "0.1.0"
description = "This will hold all the dependencies for the project."
authors = ["Jinal.Shah <28205508+JinalShah2002@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
